# List of sources
file(GLOB LIBCOMMON_SOURCES "*.cc")

add_library(lae3common SHARED
  ${LIBCOMMON_SOURCES}
)

set_target_properties(lae3common
  PROPERTIES
  VERSION ${CPACK_PACKAGE_VERSION}
  SOVERSION ${CPACK_PACKAGE_VERSION_MAJOR}
)

install(
  TARGETS lae3common
  LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
  ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
)
